views/shared/exhibit_layouts/nal-imggal/layout.css
.layout-nal-imggal .gallery .exhibit-item, 
.layout-nal-imggal .gallery .exhibit-item:nth-of-type(2n) {
    width: 23.5%;
    margin-right: 1.25%;
}

.layout-nal-imggal .gallery .exhibit-item:nth-of-type(4n) {
    margin-right: 0;
}

.layout-nal-imggal .gallery.with-showcase {
    margin-bottom: .5em;
}

.layout-nal-imggal .gallery.with-showcase .exhibit-item {
    width: 49%;
    margin-right: 2%;
}

.layout-nal-imggal .gallery.with-showcase .exhibit-item:nth-of-type(2n) {
    margin-right: 0;
}

.layout-nal-imggal #imggal-row .exhibit-item:first-child:nth-last-child(2),
.layout-nal-imggal #imggal-row .exhibit-item:first-child:nth-last-child(2) ~ .exhibit-item {
    display:inline-block;
}

.layout-nal-imggal #imggal-row .exhibit-item:first-child:nth-last-child(3),
.layout-nal-imggal #imggal-row .exhibit-item:first-child:nth-last-child(3) ~ .exhibit-item {
    display:inline-block;
}

.layout-nal-imggal #imggal-row .exhibit-item:first-child:nth-last-child(1),
.layout-nal-imggal #imggal-row .exhibit-item:first-child:nth-last-child(1) ~ .exhibit-item {
    display:inline-block;
}



.layout-nal-imggal .gallery-showcase,
.layout-nal-imggal .gallery.with-showcase,
.layout-nal-imggal .gallery.left, 
.layout-nal-imggal .gallery.right {
    width: 49%;
}

.layout-nal-imggal .gallery-showcase.left,
.layout-nal-imggal .gallery.left {
    float: left;
    margin-right: 2%;
}

.layout-nal-imggal .gallery-showcase.right,
.layout-nal-imggal .gallery.right {
    float: right;
    margin-left: 2%;
}

.layout-nal-imggal .gallery-showcase.right.with-left +
.gallery.with-showcase.left {
    margin-right: 0;
}

.layout-nal-imggal a {
    border-bottom: 0;
}

.layout-nal-imggal .exhibit-item-link *,
.layout-nal-imggal .download-file * {
    width: 100%;
    margin-bottom: 2%;
}

.layout-nal-imggal .exhibit-item {
    display: table-cell;
    vertical-align: top;
    margin-bottom: 1.25%;
    padding:10px !important;
}

.layout-nal-imggal .gallery-showcase.left.with-right +
.gallery.with-showcase.right {
    margin-left: 0;
}

.layout-nal-imggal .gallery-showcase.right.with-left {
    margin-left: 2%;
}

.layout-nal-imggal .gallery.with-showcase.left {
    clear: left;
}

.layout-nal-imggal .gallery.with-showcase.right {
    clear: right;
}

.layout-nal-imggal .gallery.with-showcase img {
    max-width: 100%;
}

.layout-nal-imggal .exhibit-item-caption p {
    margin: 0 0 2% 0;
    clear: both;
}

.layout-nal-imggal {
    width:100%;
    text-align:center;
    display:table;
}

.layout-nal-imggal .exhibit-item-title {
    clear: both;
    font-size:1.25em;
}

.layout-nal-imggal .exhibit-item-date {
    font-style:italic;
    clear: both;
    font-size:1.25em;
    margin-bottom:0.5em;
}

.layout-nal-imggal .exhibit-item-transcript {
    font-family: "Courier New", monospace;
    text-align:justify;
}

#imggal-row > div:only-child {
    width: 90%;
}

@media only screen and (min-width: 768px) and (max-width: 959px) {
    .layout-nal-imggal .exhibit-item {
        clear:both !important; 
        display:block !important;      
        width:100% !important;
        padding: 0px !important;
    }
}

@media only screen and (max-width: 767px) {
    .layout-nal-imggal .exhibit-item {
        clear:both !important;       
        display:block !important;      
        width:100% !important;
        padding: 0px !important;
    }
}

@media only screen and (min-width: 480px) and (max-width: 767px) {
    .layout-nal-imggal .exhibit-item {
        clear:both !important;
        display:block !important;      
        width:100% !important; 
        padding: 0px !important;      
    }
}

@media only screen and (max-width: 640px) {
    .layout-nal-imggal .exhibit-item {
        clear:both !important;
        display:block !important;      
        width:100% !important;     
        padding: 0px !important;  
    }


}

